--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>새로만든 index 페이지 - 작업중</title>
+  <title>홈페이지 작업중</title>
 </head>
 
 <body>
-  새로만든 index 페이지를 생성했습니다. - 작업중
+  <center>
+    <img src="./working.jpg" alt="홈페이지 작업중입니다." width="640" height="480">
+  </center>
 </body>
 
 </html>
